Added more methods to the Open API

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>simplified JS</title>
 </head>
 <body>
-<script src="bundle.js"></script>
+<script src="dist/bundle.js"></script>
 </body>
 </html>
