Added Cookies module

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>simplified JS</title>
 </head>
 <body>
-<script src="dist/bundle.js"></script>
+<script src="dist/Squatch.OpenApi.js"></script>
+<script src="dist/Squatch.Tracking.js"></script>
 </body>
 </html>
