--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <body>
 <script src="dist/Squatch.OpenApi.js"></script>
 <script src="dist/Squatch.Tracking.js"></script>
+<script src="dist/Squatch.All.js"></script>
 </body>
 </html>
