A dependency to an entry point is not allowed

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script src="dist/Squatch.OpenApi.js"></script>
-<script src="dist/Squatch.Tracking.js"></script>
+<!-- <script src="dist/Squatch.Tracking.js"></script> -->
 <script src="dist/Squatch.All.js"></script>
 </body>
 </html>
