--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>simplified JS</title>
 </head>
 <body>
-<script src="dist/Squatch.OpenApi.js"></script>
+<!-- <script src="dist/Squatch.OpenApi.js"></script> -->
 <!-- <script src="dist/Squatch.Tracking.js"></script> -->
-<script src="dist/Squatch.All.js"></script>
+<script src="dist/Squatch.js"></script>
 </body>
 </html>
