Load anonymous user widget

--- a/index.html
+++ b/index.html
@@ -32,13 +32,11 @@
   <script>
 
   squatch.ready(function(){
-    console.log("Ready");
-    squatch.init({tenantAlias: "masdf123e"});
+    squatch.init({tenantAlias: "aywfi8vgiwnis"});
   });
 
   </script>
-<!-- <script src="dist/Squatch.OpenApi.js"></script> -->
-<!-- <script src="dist/Squatch.Tracking.js"></script> -->
-<!-- <script src="dist/Squatch.js"></script> -->
+
+  <div id="squatchembed"></div>
 </body>
 </html>
