--- a/index.html
+++ b/index.html
@@ -32,7 +32,16 @@
   <script>
 
   squatch.ready(function(){
-    squatch.init({tenantAlias: "aywfi8vgiwnis"});
+    squatch.init({tenant_alias: "aywfi8vgiwnis",
+    //  account_id: 'abc',
+    //  payment_provider_id: 'cus_1234',
+    //  user_id: '5678',
+    //  email: 'bob@example.com',
+    //  first_name: 'Bob',
+    //  last_name: 'Testerson',
+    //  element: 'squatchembed' -> NEW PARAMTER ??
+      mode: 'EMBED' // Use this if you want to display the widget
+    });
   });
 
   </script>
