Fixed some async stuff

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     //  element: 'squatchembed' -> NEW PARAMTER ??
       mode: 'EMBED' // Use this if you want to display the widget
     });
+    squatch.api.lookUpReferralCode({referralCode: "JORGECONDE"}).then(function(json) {console.log(json)});
   });
 
   </script>
