--- a/index.html
+++ b/index.html
@@ -36,14 +36,15 @@
       tenant_alias: "aywfi8vgiwnis",
       user: {
         accountId: 'abc',
-        id: '5678',
-        email: 'jorge@referralsaasquatch.com',
-        firstName: 'Jorge',
-        lastName: 'Conde'
-      }
+        id: '123',
+        email: 'erik@saasqt.ch',
+        firstName: 'Erik',
+        lastName: 'Aalbers'
+      },
+      mode: 'POPUP'
 
     });
-    squatch.api.lookUpReferralCode({referralCode: "JORGECONDE"}).then(function(json) {console.log(json)});
+    // squatch.api.lookUpReferralCode({referralCode: "JORGECONDE"}).then(function(json) {console.log(json)});
   });
 
   </script>
