Widget event handler example. Need to refactor code and do the same for every button

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
   squatch.ready(function(){
     squatch.init({
-      tenant_alias: "aywfi8vgiwnis",
+      tenant_alias: "test_aspli64xauzne",
       user: {
         accountId: 'abc',
         id: '123',
