--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
         firstName: 'Erik',
         lastName: 'Aalbers'
       },
-      engagementMedium: 'EMBED'
+      engagementMedium: 'POPUP',
+      widgetType: 'CONVERSION_WIDGET'
       // jwt: 'token'
 
     });
