CTA widget works

--- a/index.html
+++ b/index.html
@@ -36,14 +36,11 @@
       tenant_alias: "test_acy9ap6sesuid",
       user: {
         accountId: 'abc',
-        id: '123',
-        email: 'erik@saasqt.ch',
-        firstName: 'Erik',
-        lastName: 'Aalbers'
+        id: '123'
       },
       engagementMedium: 'POPUP',
-      widgetType: 'CONVERSION_WIDGET'
-      // jwt: 'token'
+      widgetType: 'CONVERSION_WIDGET',
+      jwt: 'token'
 
     });
     // squatch.api.lookUpReferralCode({referralCode: "JORGECONDE"}).then(function(json) {console.log(json)});
