Changes to widget api and analytics api

--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
       tenant_alias: "test_acy9ap6sesuid",
       user: {
         accountId: 'abc',
-        id: '123'
+        id: '123',
+        // email: 'erik@saasqt.ch',
+        // firstName: 'Erik',
+        // lastName: 'Aalbers'
       },
       engagementMedium: 'POPUP',
       widgetType: 'CONVERSION_WIDGET',
