Add reload function

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         // firstName: 'Erik',
         // lastName: 'Aalbers'
       },
-      engagementMedium: 'POPUP',
-      widgetType: 'CONVERSION_WIDGET',
+      engagementMedium: 'EMBED',
+      widgetType: 'REFERRER_WIDGET',
       jwt: 'token'
 
     });
