Added widget reload functionality. Refactored widgets

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
       tenant_alias: "test_acy9ap6sesuid",
       user: {
         accountId: 'abc',
-        id: '123',
+        id: '123'
         // email: 'erik@saasqt.ch',
         // firstName: 'Erik',
         // lastName: 'Aalbers'
       },
-      engagementMedium: 'EMBED',
-      widgetType: 'REFERRER_WIDGET',
+      engagementMedium: 'POPUP',
+      widgetType: 'CONVERSION_WIDGET',
       jwt: 'token'
 
     });
