Popup reload working

--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
 
   squatch.ready(function(){
     squatch.init({
-      tenant_alias: "test_acy9ap6sesuid",
-      user: {
-        accountId: 'abc',
-        id: '123'
-        // email: 'erik@saasqt.ch',
-        // firstName: 'Erik',
-        // lastName: 'Aalbers'
-      },
+      tenant_alias: "test_ak9htmontgeca",
+      // user: {
+      //   // accountId: 'abc',
+      //   // id: '123'
+      //   // email: 'erik@saasqt.ch',
+      //   // firstName: 'Erik',
+      //   // lastName: 'Aalbers'
+      // },
       engagementMedium: 'POPUP',
-      widgetType: 'CONVERSION_WIDGET',
+      widgetType: 'REFERRER_WIDGET',
       jwt: 'token'
 
     });
