Added Error template

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       //   // firstName: 'Erik',
       //   // lastName: 'Aalbers'
       // },
-      engagementMedium: 'POPUP',
+      engagementMedium: 'EMBED',
       widgetType: 'REFERRER_WIDGET',
       jwt: 'token'
 
