update widget api

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
       //   // firstName: 'Erik',
       //   // lastName: 'Aalbers'
       // },
-      engagementMedium: 'EMBED',
-      widgetType: 'REFERRER_WIDGET',
+      engagementMedium: 'POPUP',
+      widgetType: 'CONVERSION_WIDGET',
       jwt: 'token'
 
     });
