Add URL rules handling

--- a/index.html
+++ b/index.html
@@ -34,37 +34,12 @@
   squatch.ready(function(){
     squatch.init({
       tenant_alias: "test_ak9htmontgeca",
-      // user: {
-      //   // accountId: 'abc',
-      //   // id: '123'
-      //   // email: 'erik@saasqt.ch',
-      //   // firstName: 'Erik',
-      //   // lastName: 'Aalbers'
-      // },
-      engagementMedium: 'POPUP',
-      widgetType: 'CONVERSION_WIDGET',
-      jwt: 'token'
+      // engagementMedium: 'EMBED',
+      // widgetType: 'REFERRER_WIDGET',
+      jwt: 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhbGxvd0Fub255bW91cyI6dHJ1ZX0.fe5IFfmNQDCClAHfGLtrFMWf6XLsFtJHYz3CL35-43Y'
 
     });
-    // squatch.api.lookUpReferralCode({referralCode: "JORGECONDE"}).then(function(json) {console.log(json)});
-    // squatch.api.render({
-    //   tenant_alias: "test_aspli64xauzne",
-    //   user: {
-    //     accountId: 'abc',
-    //     id: '123',
-    //     email: 'erik@saasqt.ch',
-    //     firstName: 'Erik',
-    //     lastName: 'Aalbers'
-    //   },
-    //   mode: 'POPUP',
-    //   // jwt: 'token'
-    //
-    // }).then(function(response) {
-    //   console.log('render');
-    //   console.log(response);
-    // }).catch(function(ex) {
-    //   console.log(new Error('render() ' + ex));
-    // });
+
   });
 
   </script>
