Add URL rules handling

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       tenant_alias: "test_ak9htmontgeca",
       // engagementMedium: 'EMBED',
       // widgetType: 'REFERRER_WIDGET',
-      jwt: 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhbGxvd0Fub255bW91cyI6dHJ1ZX0.fe5IFfmNQDCClAHfGLtrFMWf6XLsFtJHYz3CL35-43Y'
+      jwt: 'token'
 
     });
 
