--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 
   squatch.ready(function(){
     squatch.init({
-      tenant_alias: "test_ak9htmontgeca",
+      tenantAlias: "test_ak9htmontgeca",
+
       // engagementMedium: 'EMBED',
       // widgetType: 'REFERRER_WIDGET',
-      jwt: 'token'
-
+      // jwt: 'token'
     });
 
   });
