--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
       // engagementMedium: 'EMBED',
       // widgetType: 'REFERRER_WIDGET',
-      // jwt: 'token'
+      jwt: 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhbGxvd0Fub255bW91cyI6dHJ1ZX0.fe5IFfmNQDCClAHfGLtrFMWf6XLsFtJHYz3CL35-43Y'
     });
 
   });
