--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
       c[a].ready = function(b){
         c["_" + a].ready =  c["_" + a].ready || [];
         c["_" + a].ready.push(b);
-      },
+      }
+
 
       e=document.createElement("script"),
       e.async=1,
@@ -33,17 +34,23 @@
 
   squatch.ready(function(){
     squatch.init({
-      tenantAlias: "test_ak9htmontgeca",
+      tenantAlias: "test_ak9htmontgeca"
+    });
 
-      // engagementMedium: 'EMBED',
+    squatch.api.cookieUser({
+      // engagementMedium: 'POPUP',
       // widgetType: 'REFERRER_WIDGET',
       jwt: 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhbGxvd0Fub255bW91cyI6dHJ1ZX0.fe5IFfmNQDCClAHfGLtrFMWf6XLsFtJHYz3CL35-43Y'
+    }).then(function(response) {
+      // console.log(response);
+      squatch.load(response, {engagementMedium: 'POPUP'});
     });
 
   });
 
   </script>
 
+  <input type="text" name="Coupon" id="my_coupon" value="" />
   <div id="squatchembed"></div>
   <button id="squatchpop">Open Modal</button>
 </body>
