squatch.js updates

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     squatch.api.cookieUser({
       // engagementMedium: 'POPUP',
       // widgetType: 'REFERRER_WIDGET',
-      jwt: 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhbGxvd0Fub255bW91cyI6dHJ1ZX0.fe5IFfmNQDCClAHfGLtrFMWf6XLsFtJHYz3CL35-43Y'
+      jwt: 'token'
     }).then(function(response) {
       // console.log(response);
       squatch.load(response, {engagementMedium: 'POPUP'});
