api and widgets exports are now functions

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     var user;
     var widget
 
-    squatch.widgets.createCookieUser({
+    squatch.widgets().createCookieUser({
       engagementMedium: 'POPUP',
       widgetType: 'REFERRER_WIDGET',
       jwt: 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhbGxvd0Fub255bW91cyI6dHJ1ZX0.fe5IFfmNQDCClAHfGLtrFMWf6XLsFtJHYz3CL35-43Y'
