--- a/index.html
+++ b/index.html
@@ -41,10 +41,28 @@
     var user;
     var widget
 
-    squatch.widgets().createCookieUser({
+    // squatch.widgets().createCookieUser({
+    //   engagementMedium: 'POPUP',
+    //   widgetType: 'REFERRER_WIDGET',
+    //   jwt: 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhbGxvd0Fub255bW91cyI6dHJ1ZX0.fe5IFfmNQDCClAHfGLtrFMWf6XLsFtJHYz3CL35-43Y'
+    // }).then(function (response) {
+    //   user = response.user;
+    //   widget = response.widget;
+    // }).catch(function (err) {
+    //   console.log(err);
+    // });
+
+    squatch.widgets().upsertUser({
+      user: {
+        id: '123',
+        accountId: 'abc',
+        firstName: 'Jorge',
+        lastName: 'Conde',
+        email: 'jorge@uvic.ca'
+      },
       engagementMedium: 'POPUP',
       widgetType: 'REFERRER_WIDGET',
-      jwt: 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhbGxvd0Fub255bW91cyI6dHJ1ZX0.fe5IFfmNQDCClAHfGLtrFMWf6XLsFtJHYz3CL35-43Y'
+      jwt: 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyIjp7ImlkIjoiMTIzIiwiYWNjb3VudElkIjoiYWJjIiwiZmlyc3ROYW1lIjoiSm9yZ2UiLCJsYXN0TmFtZSI6IkNvbmRlIiwiZW1haWwiOiJqb3JnZUB1dmljLmNhIn19.XJkF46NCJVymr3o1532YCgofn_tBoApDWDDV-o-EXsI'
     }).then(function (response) {
       user = response.user;
       widget = response.widget;
@@ -53,6 +71,11 @@
     });
 
   });
+
+  // squatch.ready(function(){
+  //   squatch.init({ tenantAlias: "YOUR_TENANT_ALIAS" });
+  //   squatch.widgets.createCookieUser({});
+  // });
 
   </script>
 
