Added new functionality for reload widget stuff

--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
     var user;
     var widget
 
-    squatch.widgets().createCookieUser({});
+    squatch.widgets().createCookieUser({
+      engagementMedium: 'EMBED'
+    });
 
     // squatch.widgets().upsertUser({
     //   user: {
