IE fix and widgetApi changes

--- a/index.html
+++ b/index.html
@@ -67,12 +67,11 @@
     //   widget.reload(email, jwt);
     // });
 
-  });
+    // squatch.api().render({user: {id: '123', accountId: 'abc'}}).then(function(response) {
+    //   console.log('response', response);
+    // });
 
-  // squatch.ready(function(){
-  //   squatch.init({ tenantAlias: "YOUR_TENANT_ALIAS" });
-  //   squatch.widgets.createCookieUser({});
-  // });
+  });
 
   </script>
 
