--- a/test/testrunner.html
+++ b/test/testrunner.html
@@ -11,7 +11,7 @@
     <script>mocha.setup('bdd')</script>
 
     <!-- load code you want to test here -->
-    <script src="../dist/Squatch.OpenApi.js"></script>
+    <script src="../dist/Squatch.WidgetApi.js"></script>
 
     <!-- load your test files here -->
     <script src="apiTest.js"></script>
