--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
 
   squatch.ready(function(){
     squatch.init({
-      tenantAlias: "tenantAlias"
+      tenantAlias: "test_ak9htmontgeca"
     });
 
 
     squatch.widgets().createCookieUser({
-      engagementMedium: 'EMBED'
+      engagementMedium: 'POPUP'
     }).then(function(res){
       console.log(res);
     }).catch(function(err) {
@@ -52,6 +52,6 @@
 
   <input type="text" name="Coupon" id="my_coupon" value="" />
   <div id="squatchembed"></div>
-  <button id="squatchpop">Open Modal</button>
+  <button class="squatchpop">Open Modal</button>
 </body>
 </html>
