CTA widget not displaying fix

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
   squatch.ready(function(){
     squatch.init({
-      tenantAlias: "test_ak9htmontgeca"
+      tenantAlias: "your tenant alias"
     });
 
 
