Be able to upsert user with more parameters coming from theme

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     squatch.widgets().createCookieUser({
       engagementMedium: 'EMBED',
-      widgetType: 'REFERRER_WIDGET'
+      widgetType: 'CONVERSION_WIDGET'
     }).then(function(res){
       console.log(res);
     }).catch(function(err) {
