--- a/index.html
+++ b/index.html
@@ -34,14 +34,30 @@
 
   squatch.ready(function(){
     squatch.init({
-      tenantAlias: "alias"
+      tenantAlias: "test_asmhxnffb9cml"
     });
 
+    var initObj = {
+      user: {
+        "id": "abc_123",
+        "accountId": "abc_123",
+        "firstName": "John",
+        "lastName": "Doe",
+        "email": "john@example.com",
+        "referable": true,
+        "referralCode": "JOHNDOE",
+        "referredBy": {
+          "code": "JANEDOE",
+          "isConverted": true
+        }
+      },
+      engagementMedium: 'POPUP',
+      widgetType: 'REFERRER_WIDGET',
+      jwt: 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyIjp7ImlkIjoiYWJjXzEyMyIsImFjY291bnRJZCI6ImFiY18xMjMiLCJmaXJzdE5hbWUiOiJKb2huIiwibGFzdE5hbWUiOiJEb2UiLCJlbWFpbCI6ImpvaG5AZXhhbXBsZS5jb20iLCJyZWZlcmFibGUiOnRydWUsInJlZmVycmFsQ29kZSI6IkpPSE5ET0UiLCJyZWZlcnJlZEJ5Ijp7ImNvZGUiOiJKQU5FRE9FIiwiaXNDb252ZXJ0ZWQiOnRydWV9fX0.3IqZGSfsseEWa-1WYx8jB9i0r2f5nbKXqD2ByH8byCc'
+    }
 
-    squatch.widgets().createCookieUser({
-      engagementMedium: 'EMBED',
-      widgetType: 'REFERRER_WIDGET'
-    }).then(function(res){
+
+    squatch.widgets().upsertUser(initObj).then(function(res){
       console.log(res);
     }).catch(function(err) {
       console.log(err);
