--- a/index.html
+++ b/index.html
@@ -34,26 +34,21 @@
 
   squatch.ready(function(){
     squatch.init({
-      tenantAlias: "test_asmhxnffb9cml"
+      domain: 'https://staging.referralsaasquatch.com',
+    tenantAlias: 'test_ahq6tdmfclzwx'
     });
 
     var initObj = {
-      user: {
-        "id": "abc_123",
-        "accountId": "abc_123",
-        "firstName": "John",
-        "lastName": "Doe",
-        "email": "john@example.com",
-        "referable": true,
-        "referralCode": "JOHNDOE",
-        "referredBy": {
-          "code": "JANEDOE",
-          "isConverted": true
-        }
-      },
+      widgetType: "p/jorge3/w/referrerWidget",
       engagementMedium: 'POPUP',
-      widgetType: 'REFERRER_WIDGET',
-      jwt: 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyIjp7ImlkIjoiYWJjXzEyMyIsImFjY291bnRJZCI6ImFiY18xMjMiLCJmaXJzdE5hbWUiOiJKb2huIiwibGFzdE5hbWUiOiJEb2UiLCJlbWFpbCI6ImpvaG5AZXhhbXBsZS5jb20iLCJyZWZlcmFibGUiOnRydWUsInJlZmVycmFsQ29kZSI6IkpPSE5ET0UiLCJyZWZlcnJlZEJ5Ijp7ImNvZGUiOiJKQU5FRE9FIiwiaXNDb252ZXJ0ZWQiOnRydWV9fX0.3IqZGSfsseEWa-1WYx8jB9i0r2f5nbKXqD2ByH8byCc'
+      user: {
+        id: 'abc_123',
+        accountId: 'abc_123',
+        email: 'john@example.com',
+        firstName: 'John',
+        lastName: 'Doe'
+      },
+      jwt: 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyIjp7ImlkIjoiYWJjXzEyMyIsImFjY291bnRJZCI6ImFiY18xMjMiLCJlbWFpbCI6ImpvaG5AZXhhbXBsZS5jb20iLCJmaXJzdE5hbWUiOiJKb2huIiwibGFzdE5hbWUiOiJEb2UifX0.8UIafGkjo8pnqh_7BG57QXhTZNRnJ2IKTPzejWFL1iA'
     }
 
 
