--- a/demo/index.html
+++ b/demo/index.html
@@ -38,6 +38,8 @@
     crossorigin="anonymous">
 
     <link rel="stylesheet" href="styles.css">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
