refactored embed and popup reload function

--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
     });
 
     var initObj = {
-      widgetType: "CONVERSION_WIDGET",
-      engagementMedium: 'EMBED',
+      widgetType: "REFERRER_WIDGET",
+      engagementMedium: 'POPUP',
       user: {
-        id: 'abc_129',
-        accountId: 'abc_129'
+        id: 'abc_137',
+        accountId: 'abc_137'
       }
     }
 
