more mocked widgets, some improved behaviors

--- a/demo/index.html
+++ b/demo/index.html
@@ -87,7 +87,7 @@
     </script>
 
     <div style="display: flex">
-      <div style="width: 40%; background: #ccc; padding: 20px">
+      <div style="max-width:40%;height:50%;background: #ccc; padding: 20px" class="toolbar">
         <div id="app"></div>
       </div>
       <div style="width: 60%; padding: 20px">
