added support for custom trigger selector on popups, refresh on open event as well

--- a/demo/index.html
+++ b/demo/index.html
@@ -108,6 +108,7 @@
           <div class="col-md-12">
             <h2>Embed Widget:</h2>
             <div id="squatchembed">Loading....</div>
+            <div id="test-selector"></div>
           </div>
         </div>
         <div>
