add auto popup functionality

--- a/demo/index.html
+++ b/demo/index.html
@@ -65,10 +65,7 @@
         setStatus("Rendering widget");
         console.log("Squatch.js is ready", squatch);
 
-        // squatch.auto();
-        squatch.auto({
-          debug: true,
-        });
+        squatch.auto();
 
         // squatch.init({
         //   domain: window.sandbox.domain,
